Ajout des OGP et Twitter cards

--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
+    <meta property="og:title" content="Emmanuelle Rey, développeuse web front-end" />
+    <meta property="og:description" content="Je suis Emmanuelle Rey, développeuse web front-end dans la région Toulousaine. J'ai réalisé ce portfolio dans le but de vous présenter mes expériences et mon domaine d'expertise." />
+    <meta property="og:image" content="https://raw.githubusercontent.com/Emy2024/emmanuelle-rey/refs/heads/main/public/OGPTwitterCard/OGP.jpg" />
+    <meta property="og:url" content="https://emy2024.github.io/emmanuelle-rey/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Emmanuelle Rey, développeuse web front-end" />
+    <meta name="twitter:description" content="Je suis Emmanuelle Rey, développeuse web front-end dans la région Toulousaine. J'ai réalisé ce portfolio dans le but de vous présenter mes expériences et mon domaine d'expertise." />
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/Emy2024/emmanuelle-rey/refs/heads/main/public/OGPTwitterCard/twitter_card.jpg" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/emmanuelle-rey-thumbnail.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Emmanuelle Rey | Développeuse web</title>
+    <title>Emmanuelle Rey | Développeuse web</title> 
   </head>
   <body>
     <div id="root"></div>
