Ajout de la balise meta description

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="twitter:image" content="https://raw.githubusercontent.com/Emy2024/emmanuelle-rey/refs/heads/main/public/OGPTwitterCard/twitter_card.jpg" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/emmanuelle-rey-thumbnail.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Portoflio d'une développeuse web front-end passionnée basée à Toulouse. Spécialisée JavaScript, React et SASS et toujours curieuse d'apprendre de nouveaux langages et frameworks." />
     <title>Emmanuelle Rey | Développeuse web</title> 
   </head>
   <body>
