--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta property="og:description" content="Je suis Emmanuelle Rey, développeuse web front-end dans la région Toulousaine. J'ai réalisé ce portfolio dans le but de vous présenter mes expériences et mon domaine d'expertise." />
     <meta property="og:image" content="https://raw.githubusercontent.com/Emy2024/emmanuelle-rey/refs/heads/main/public/OGPTwitterCard/OGP.jpg" />
     <meta property="og:url" content="https://emy2024.github.io/emmanuelle-rey/" />
+    <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Emmanuelle Rey, développeuse web front-end" />
     <meta name="twitter:description" content="Je suis Emmanuelle Rey, développeuse web front-end dans la région Toulousaine. J'ai réalisé ce portfolio dans le but de vous présenter mes expériences et mon domaine d'expertise." />
